[gd_scene load_steps=2 format=3 uid="uid://2iswqfi1mcrw"]

[ext_resource type="Script" uid="uid://bmftifc2qvqkx" path="res://Scripts/UI/settings_menu.gd" id="1_kfh4b"]

[node name="OptionsMenu" type="Control"]
process_mode = 3
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_kfh4b")

[node name="Background" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.784314)

[node name="PanelContainer" type="PanelContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -450.0
offset_top = -250.0
offset_right = 450.0
offset_bottom = 250.0
grow_horizontal = 2
grow_vertical = 2

[node name="MarginContainer" type="MarginContainer" parent="PanelContainer"]
layout_mode = 2
theme_override_constants/margin_left = 15
theme_override_constants/margin_top = 15
theme_override_constants/margin_right = 15
theme_override_constants/margin_bottom = 15

[node name="MainLayout" type="HBoxContainer" parent="PanelContainer/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 20

[node name="CategoryList" type="VBoxContainer" parent="PanelContainer/MarginContainer/MainLayout"]
custom_minimum_size = Vector2(200, 0)
layout_mode = 2
theme_override_constants/separation = 10

[node name="TitleLabel" type="Label" parent="PanelContainer/MarginContainer/MainLayout/CategoryList"]
layout_mode = 2
theme_override_font_sizes/font_size = 28
text = "UI_SETTINGS_TITLE"

[node name="HSeparator" type="HSeparator" parent="PanelContainer/MarginContainer/MainLayout/CategoryList"]
layout_mode = 2

[node name="VideoButton" type="Button" parent="PanelContainer/MarginContainer/MainLayout/CategoryList"]
layout_mode = 2
text = "UI_VIDEO"

[node name="AudioButton" type="Button" parent="PanelContainer/MarginContainer/MainLayout/CategoryList"]
layout_mode = 2
text = "UI_AUDIO"

[node name="LanguageButton" type="Button" parent="PanelContainer/MarginContainer/MainLayout/CategoryList"]
layout_mode = 2
text = "UI_LANGUAGE"

[node name="Spacer" type="Control" parent="PanelContainer/MarginContainer/MainLayout/CategoryList"]
layout_mode = 2
size_flags_vertical = 3

[node name="BackButton" type="Button" parent="PanelContainer/MarginContainer/MainLayout/CategoryList"]
layout_mode = 2
text = "UI_BACK"

[node name="VSeparator" type="VSeparator" parent="PanelContainer/MarginContainer/MainLayout"]
layout_mode = 2

[node name="CategoryContent" type="VBoxContainer" parent="PanelContainer/MarginContainer/MainLayout"]
layout_mode = 2
size_flags_horizontal = 3

[node name="VideoSettings" type="VBoxContainer" parent="PanelContainer/MarginContainer/MainLayout/CategoryContent"]
layout_mode = 2
theme_override_constants/separation = 10

[node name="Label" type="Label" parent="PanelContainer/MarginContainer/MainLayout/CategoryContent/VideoSettings"]
layout_mode = 2
theme_override_font_sizes/font_size = 22
text = "UI_VIDEO_OPTIONS"

[node name="MonitorLabel" type="Label" parent="PanelContainer/MarginContainer/MainLayout/CategoryContent/VideoSettings"]
layout_mode = 2
text = "UI_MONITOR"

[node name="MonitorOptionButton" type="OptionButton" parent="PanelContainer/MarginContainer/MainLayout/CategoryContent/VideoSettings"]
layout_mode = 2

[node name="WindowModeLabel" type="Label" parent="PanelContainer/MarginContainer/MainLayout/CategoryContent/VideoSettings"]
layout_mode = 2
text = "UI_WINDOW_MODE"

[node name="WindowModeOptionButton" type="OptionButton" parent="PanelContainer/MarginContainer/MainLayout/CategoryContent/VideoSettings"]
layout_mode = 2

[node name="ResolutionLabel" type="Label" parent="PanelContainer/MarginContainer/MainLayout/CategoryContent/VideoSettings"]
layout_mode = 2
text = "UI_RESOLUTION"

[node name="ResolutionOptionButton" type="OptionButton" parent="PanelContainer/MarginContainer/MainLayout/CategoryContent/VideoSettings"]
layout_mode = 2

[node name="AudioSettings" type="VBoxContainer" parent="PanelContainer/MarginContainer/MainLayout/CategoryContent"]
visible = false
layout_mode = 2
theme_override_constants/separation = 10

[node name="Label" type="Label" parent="PanelContainer/MarginContainer/MainLayout/CategoryContent/AudioSettings"]
layout_mode = 2
theme_override_font_sizes/font_size = 22
text = "UI_AUDIO_OPTIONS"

[node name="MasterLabel" type="Label" parent="PanelContainer/MarginContainer/MainLayout/CategoryContent/AudioSettings"]
layout_mode = 2
text = "UI_MASTER_VOLUME"

[node name="MasterSlider" type="HSlider" parent="PanelContainer/MarginContainer/MainLayout/CategoryContent/AudioSettings"]
layout_mode = 2
max_value = 1.0
step = 0.01
value = 1.0

[node name="MusicLabel" type="Label" parent="PanelContainer/MarginContainer/MainLayout/CategoryContent/AudioSettings"]
layout_mode = 2
text = "UI_MUSIC_VOLUME"

[node name="MusicSlider" type="HSlider" parent="PanelContainer/MarginContainer/MainLayout/CategoryContent/AudioSettings"]
layout_mode = 2
max_value = 1.0
step = 0.01
value = 1.0

[node name="SfxLabel" type="Label" parent="PanelContainer/MarginContainer/MainLayout/CategoryContent/AudioSettings"]
layout_mode = 2
text = "UI_SFX_VOLUME"

[node name="SfxSlider" type="HSlider" parent="PanelContainer/MarginContainer/MainLayout/CategoryContent/AudioSettings"]
layout_mode = 2
max_value = 1.0
step = 0.01
value = 1.0

[node name="LanguageSettings" type="VBoxContainer" parent="PanelContainer/MarginContainer/MainLayout/CategoryContent"]
visible = false
layout_mode = 2
theme_override_constants/separation = 10

[node name="Label" type="Label" parent="PanelContainer/MarginContainer/MainLayout/CategoryContent/LanguageSettings"]
layout_mode = 2
theme_override_font_sizes/font_size = 22
text = "UI_LANGUAGE_OPTIONS"

[node name="LanguageOptionsContainer" type="VBoxContainer" parent="PanelContainer/MarginContainer/MainLayout/CategoryContent/LanguageSettings"]
layout_mode = 2
theme_override_constants/separation = 5

[node name="Spacer" type="Control" parent="PanelContainer/MarginContainer/MainLayout/CategoryContent"]
layout_mode = 2
size_flags_vertical = 3

[node name="ApplyButton" type="Button" parent="PanelContainer/MarginContainer/MainLayout/CategoryContent"]
layout_mode = 2
text = "UI_APPLY"
